MCR-3235 Enable PMD rule SystemPrintln